syntax = "proto3";

package scd;

option go_package = "genpb/proto;proto";

service SCDService {
  rpc GetLatestJobs (GetLatestJobsRequest) returns (GetLatestJobsResponse);
  rpc UpdateJob (UpdateJobRequest) returns (Job);
}

message Job {
  string id = 1;
  int32 version = 2;
  string uid = 3;
  string status = 4;
  float rate = 5;
  string title = 6;
  string company_id = 7;
  string contractor_id = 8;
}

message GetLatestJobsRequest {
  string status_filter = 1; // optional filter
}

message GetLatestJobsResponse {
  repeated Job jobs = 1;
}

message UpdateJobRequest {
  string id = 1;
  map<string, string> updated_fields = 2;
}
